syntax = "proto3";

package protobuf;
option java_outer_classname = "StudentProto1";

message Student1 {
  string name = 1;
  int32 age = 2;
}